--- a/AnglePlanes/CMakeLists.txt
+++ b/AnglePlanes/CMakeLists.txt
@@ -10,6 +10,7 @@ set(MODULE_PYTHON_RESOURCES
   Resources/Icons/${MODULE_NAME}.png
   Resources/UI/${MODULE_NAME}.ui
   Resources/UI/PlaneControl.ui
+  ../PythonLibrairies/DCBIA.py
   )
 
 #-----------------------------------------------------------------------------
