COMP: Correction for first compilation with Slicer.
- modification of the name of the comon librairy from DCBIALogic to LogitudinalQuantification
- modification of the way the LongitudQuantification is is build and copied in Slicer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ include(${Slicer_USE_FILE})
 add_subdirectory(AnglePlanes)
 add_subdirectory(EasyClip)
 add_subdirectory(LongitudinalQuantification)
+add_subdirectory(PythonLibrairies)
 add_subdirectory(MeshStatistics)
 add_subdirectory(PickAndPaint)
 add_subdirectory(Q3DC)
