PERF: Changement of the extension name from LongitudinalQuantification to ShapeQuantifier

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,17 @@
 cmake_minimum_required(VERSION 2.8.9)
 
-project(LongitudinalQuantificationExtension)
+project(ShapeQuantifierExtension)
 
 #-----------------------------------------------------------------------------
 # Extension meta-information
-set(EXTENSION_NAME "LongitudinalQuantification")
-set(EXTENSION_HOMEPAGE "http://www.slicer.org/slicerWiki/index.php/Documentation/Nightly/Extensions/LongitudinalQuantification")
+set(EXTENSION_NAME "ShapeQuantifier")
+set(EXTENSION_HOMEPAGE "http://www.slicer.org/slicerWiki/index.php/Documentation/Nightly/Extensions/ShapeQuantifier")
 set(EXTENSION_CATEGORY "Quantification")
 set(EXTENSION_CONTRIBUTORS "Jean-Baptiste Vimort (University of Michigan), Julia Lopinto (University of Michigan), Lucie Macron (University of Michigan),Francois Budin (University of North Carolina), Beatriz Paniagua (University of North Carolina), Juan-Carlos Prieto (University of North Carolina), Lucia Cevidanes (University of Michigan)")
 set(EXTENSION_DESCRIPTION "This extension contains different modules that allow the user to either quantify differences between two models or make measurements on the shape of a model.")
-set(EXTENSION_ICONURL "https://raw.githubusercontent.com/jbvimort/LongitudinalQuantificationExtension/master/LongitudinalQuantification/Resources/Icons/LongitudinalQuantification.png")
+set(EXTENSION_ICONURL "https://raw.githubusercontent.com/jbvimort/ShapeQuantifierExtension/master/ShapeQuantifier/Resources/Icons/ShapeQuantifier.png")
 set(EXTENSION_SCREENSHOTURLS "https://raw.githubusercontent.com/DCBIA-OrthoLab/AnglePlanes-Extension/master/AnglePlanes.png, https://raw.githubusercontent.com/DCBIA-OrthoLab/EasyClip-Extension/master/EasyClip.png, http://https://raw.githubusercontent.com/DCBIA-OrthoLab/MeshStatisticsExtension/master/MeshStatistics/Resources/Icons/MeshStatistics.png, https://raw.githubusercontent.com/DCBIA-OrthoLab/PickAndPaintExtension/master/PickAndPaint/Resources/Icons/PickAndPaint.png, https://raw.githubusercontent.com/DCBIA-OrthoLab/Q3DCExtension/master/Q3DC.png")
-set(EXTENSION_DEPENDS "CMFreg, ModelToModelDistance, ShapePopulationViewer")
+#set(EXTENSION_DEPENDS "CMFreg, ModelToModelDistance, ShapePopulationViewer")
 
 #-----------------------------------------------------------------------------
 # Extension dependencies
@@ -22,7 +22,7 @@ include(${Slicer_USE_FILE})
 # Extension modules
 add_subdirectory(AnglePlanes)
 add_subdirectory(EasyClip)
-add_subdirectory(LongitudinalQuantification)
+add_subdirectory(ShapeQuantifier)
 add_subdirectory(PythonLibrairies)
 add_subdirectory(MeshStatistics)
 add_subdirectory(PickAndPaint)
